  BugFix: The filter text box in Open-dialog sometimes displayed some garbage
    data (#1915424)
  BugFix: Print area was not clipped correctly. (#1915536)
  BugFix: Undo after pane swapping (#1915536, #1923625)
  BugFix: Quick compare for same folder didn't show differences (#1918599)
  BugFix: Installer didn't have ChangeLog.txt included (r5255)
  Translation updates:
  - Brazilian (#1913723)
  - Chinese Traditional (#1927605)
  - French (#1920380)
  - German (r5130, r5139, r5171, r5203, r5236)
  - Italian (#1939235)
  - Japanese (r5152)
  - Polish (#1934655)
  - Russian (#1914466)
  - Spanish (#1907152, r5250)
  - Swedish (#1908289)

WinMerge 2.8 RC - 2008-03-04 (r5125)
  Update developers list in splash screen (#1891548)
  Better error handling for Excel plugin (#1510293)
  Add macros, bookmarks and document properties to Word plugin (#1510298)
  Add *.dot (document template) extension to Word plugin (r5120)
  BugFix: Copy&Paste from VB6 added binary chars (#1904355)
  Translation updates:
  - Chinese Traditional (#1905323)
  - Swedish (#1905520)

WinMerge 2.7.7.6 - 2008-02-28 (r5099)
  Remove sintance.h/sintance.cpp as not compatible with GPL (#1886580)
  Automatically switch to mixed-EOL mode when loading files with
   two or more EOL styles (#1901547)
  Indent "Explorer Context Menu" sub options (#1901763)
  Replace 'DOS' in EOL style strings with 'Windows' (#1902583)
  Show 'Mixed' as file compare EOL style instead of empty style (r5091)
  Typo fixes and grammar improvements to several strings (#1898401)
  BugFix: Ignore codepage specified on File Encoding dialog if file was 
    detected as UTF-8 (#1900728)
  BugFix: Recognize invalid UTF-8 sequence as UTF-8 (#1900733)
  BugFix: Didn't highlight any difference between untitled documents (#1900257)
  Translation updates:
  - Czech (r5073)
  - Japanese (r5076)
  - Swedish (#1901784)

WinMerge 2.7.7.5 - 2008-02-22 (r5069)
  Cleaning up Help-menu (#1875111)